# pineapple

./: .gitignore  .golangci.yml  .risks_and_shortcomings.md  LICENSE  Makefile  README-en.md  README.md  engine_test.go  errors.go  go.mod  go.sum  operator.go  operator_io.go  pine.go  pine_test.go  pipeline.json  pyproject.toml  registry.go  resource_api.go  version.go
.claude/: settings.json
.githooks/: README.md  pre-commit  pre-push
.llmdoc-tmp/: engine-shell-modules-and-parity-workflow.md
apple/: __init__.py  _template_syntax.py  base.py  compiler.py  control.py  flow.py  resource.py  template.py  validator.py
apple_generated/: __init__.py  markers.py  operators.py  resources.py  resources_init.py
benchmarks/: bench_data_parallel_test.go  bench_isolated_test.go  bench_lua_vs_go_ops.go  bench_lua_vs_go_test.go  bench_test.go
blog/: 03-from-testing-to-review-driven-fixes.md
design_doc/: 01_overview.md  02_flow_abstraction.md  03_data_abstraction.md  04_operator_registration.md  05_operator_types.md  06_json_config.md  07_error_handling.md  08_observability.md  09_pine_integration.md  10_docgen.md  11_resource_manager.md  12_distribution-en.md  12_distribution.md  13_lua_vs_go_benchmark.md  bug_dag_implicit_row_set_dependency.md  bug_empty_trace_on_dag_abort.md  bug_if_control_field_pollutes_redis_key.md  demo_logical_table.md  ref_dragonfly.md  ref_explicit.py
doc/: api-en.md  api.md  dag_validation_report.md  guide_operator-en.md  guide_operator.md  guide_pipeline-en.md  guide_pipeline.md  lua_runtime_report.md  pine_validation_report.md
docs/: java-pine-gap-analysis.md  json-fixture-plan.md  pine-java-gap-analysis.md
extra/: resource_manager_design.md
fixtures/: README.md  filter_condition.json  filter_paginate.json  filter_truncate.json  fixture_test.go  merge_dedup.json  recall_static.json  reorder_sort.json  transform_by_lua_format.json  transform_copy.json  transform_normalize.json  transform_size.json
integration/: apple_e2e_test.go  dag_order_test.go  deep_nested_e2e_test.go  e2e_test.go  lua_e2e_test.go  resource_e2e_test.go
java-pine/: pom.xml
llmdoc/: index.md  startup.md
operators/: all.go
pine-cpp/: .clang-format  CMakeLists.txt
pine-cpp/cmd/pineapple-cause-chain-probe/: main.cpp
pine-cpp/cmd/pineapple-codegen/: main.cpp
pine-cpp/cmd/pineapple-render-dag/: main.cpp
pine-cpp/cmd/pineapple-run/: main.cpp
pine-cpp/cmd/pineapple-server/: main.cpp
pine-cpp/examples/: multi_pipeline_server.cpp
pine-cpp/include/pine/: arena.hpp  column.hpp  column_frame.hpp  column_store.hpp  error_chain.hpp  flat_map.hpp  frame.hpp  metrics.hpp  metrics_collector.hpp  operator.hpp  operator_input.hpp  pine.hpp  resource.hpp  row_frame.hpp  shared_mutex.hpp  template.hpp
pine-cpp/operators/: _helpers.cpp  _helpers.hpp  bench_latency.hpp  bench_stubs.cpp
pine-cpp/operators/filter/: filter_condition.cpp  filter_paginate.cpp  filter_truncate.cpp
pine-cpp/operators/merge/: merge_dedup.cpp
pine-cpp/operators/observe/: observe_log.cpp
pine-cpp/operators/recall/: recall_resource.cpp  recall_static.cpp
pine-cpp/operators/reorder/: reorder_shuffle_by_salt.cpp  reorder_sort.cpp
pine-cpp/operators/transform/: redis_connection.cpp  transform_bench_cpu.cpp  transform_bench_sleep.cpp  transform_by_lua.cpp  transform_copy.cpp  transform_dispatch.cpp  transform_normalize.cpp  transform_redis_get.cpp  transform_redis_set.cpp  transform_remote_pineapple.cpp  transform_resource_lookup.cpp  transform_size.cpp
pine-cpp/src/config/: config.cpp  json.cpp  json_writer.cpp  json_writer.hpp
pine-cpp/src/dag/: dag.cpp
pine-cpp/src/dataframe/: column.cpp  column_frame.cpp  column_frame.hpp  column_store.cpp  column_store.hpp  operator_input.cpp  row_frame.cpp
pine-cpp/src/http/: http_client.cpp  http_client.hpp  ssrf.cpp  ssrf.hpp
pine-cpp/src/lua/: lua_bridge.cpp  lua_bridge.hpp  lua_pool.cpp  lua_pool.hpp
pine-cpp/src/redis/: connection_pool.cpp  connection_pool.hpp  redis_client.cpp  redis_client.hpp
pine-cpp/src/registry/: registry.cpp
pine-cpp/src/render/: render.cpp
pine-cpp/src/resource/: resource.cpp
pine-cpp/src/runtime/: engine.cpp  errors.cpp  metrics_collector.cpp  metrics_nop.cpp  template.cpp  thread_pool.cpp  thread_pool.hpp
pine-cpp/src/server/: http_metrics.cpp  http_stats.cpp  http_stats.hpp  routes.cpp  server.cpp  server.hpp
pine-cpp/tests/: bench_lua_isolated.cpp  test_arena.cpp  test_closer.cpp  test_column.cpp  test_column_frame.cpp  test_column_write.cpp  test_config.cpp  test_dag.cpp  test_engine.cpp  test_error_chain.cpp  test_format_g.cpp  test_frame_equivalence.cpp  test_http_metrics.cpp  test_http_stats.cpp  test_item_column.cpp  test_json.cpp  test_lua_pool.cpp  test_metrics.cpp  test_metrics_aware.cpp  test_metrics_collector.cpp  test_operator_output.cpp  test_panic.cpp  test_parallel.cpp  test_redis_resource.cpp  test_register_operator.cpp  test_registry.cpp  test_remote_pineapple.cpp  test_resource.cpp  test_routes.cpp  test_row_frame.cpp  test_shared_mutex.cpp  test_stats_provider.cpp  test_template.cpp  test_trace.cpp  test_window_view_race.cpp
pine-python/: CHANGELOG.md  README.md  pyproject.toml
pine-python/pine/: __init__.py  cancellation.py  config.py  dag.py  engine.py  engine_metrics.py  errors.py  frame.py  go_format.py  http_stats.py  metrics.py  operator.py  parallel.py  registry.py  result.py  stats.py  visualize.py
pine-python/pine/cli/: cause_chain_probe.py  codegen.py  dag.py  run.py  server.py
pine-python/pine/operators/: __init__.py  filter_condition.py  filter_paginate.py  filter_truncate.py  merge_dedup.py  observe_log.py  recall_resource.py  recall_static.py  reorder_shuffle.py  reorder_sort.py  transform_by_lua.py  transform_copy.py  transform_dispatch.py  transform_normalize.py  transform_redis_get.py  transform_redis_set.py  transform_remote_pineapple.py  transform_resource_lookup.py  transform_size.py
pine-python/tests/: test_bench.py  test_dag.py  test_exception_cause_chain.py  test_fixtures.py  test_frame_equivalence.py  test_fuzz.py  test_lua_pool.py  test_server.py
(+786 files in other folders)
