[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pineapple-apple"
version = "0.1.0"
description = "Apple DSL — Python pipeline declaration for Pineapple engine"
requires-python = ">=3.10"
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["apple"]
exclude = ["apple/generated/**", "apple/tests/**"]

[tool.pytest.ini_options]
testpaths = ["apple/tests"]
