[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pineapple-apple"
dynamic = ["version"]
description = "Apple DSL — Python pipeline declaration for Pineapple engine"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"

[tool.hatch.version]
path = "apple/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["apple"]
exclude = ["apple/generated/**", "apple/tests/**"]

[tool.pytest.ini_options]
testpaths = ["apple/tests"]
