[project]
name = "pineapple-pine"
version = "0.9.5"
description = "Pineapple pipeline engine — Python runtime"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Liam Huang", email = "liam0205@hotmail.com" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "lupa>=2.0",
    "redis>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
    "pytest-benchmark>=4.0",
]

[project.urls]
Homepage = "https://github.com/Liam0205/pineapple"
Repository = "https://github.com/Liam0205/pineapple"
Issues = "https://github.com/Liam0205/pineapple/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fuzz: property-based fuzz tests (hypothesis)",
    "benchmark: performance benchmark tests (pytest-benchmark)",
]
